--- a/views/creator/layout.ejs
+++ b/views/creator/layout.ejs
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/css/creator/navbar.css">
     <link rel="stylesheet" href="/css/creator/home.css">
     <link rel="stylesheet" href="/css/creator/post.css">
+    <link rel="stylesheet" href="/css/creator/package.css">
 </head>
 
 <body>
