--- a/views/home/layout.ejs
+++ b/views/home/layout.ejs
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/css/home/navbar.css">
     <link rel="stylesheet" href="/css/home/membership.css">
     <link rel="stylesheet" href="/css/home/setting.css">
+    <link rel="stylesheet" href="/css/home/checkout.css">
 </head>
 
 <body>
