--- a/views/creator/navbar.ejs
+++ b/views/creator/navbar.ejs
@@ -13,7 +13,7 @@
         </a>
       </li>
       <li>
-        <a href="/<%= loggedIn.pname %>/members">
+        <a href="#">
           <i class="fas fa-users"></i>
           <span class="nav-item">Membership</span>
         </a>
@@ -25,13 +25,13 @@
         </a>
       </li>
       <li>
-        <a href="/<%= loggedIn.pname %>/message">
+        <a href="#">
           <i class="fas fa-envelope"></i>
           <span class="nav-item">Message</span>
         </a>
       </li>
       <li>
-        <a href="/<%= loggedIn.pname %>/setting">
+        <a href="#">
           <i class="fas fa-gear"></i>
           <span class="nav-item">Setting</span>
         </a>
